# Neural-Operator-Cryptanalysis-Lab

./: .gitignore  .pre-commit-config.yaml  AUTONOMOUS_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_FINAL_BREAKTHROUGH_REPORT.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_REPORT.md  BREAKTHROUGH_RESEARCH_PUBLICATION.md  CHANGELOG.md  COMPREHENSIVE_QUALITY_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  FINAL_IMPLEMENTATION_REPORT.md  GENERATION_2_IMPLEMENTATION_REPORT.md  GENERATION_3_IMPLEMENTATION_REPORT.md  GENERATION_3_IMPLEMENTATION_SUMMARY.md  GITHUB_WORKFLOWS_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE_HEADER.txt  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_ENHANCED.md  SECURITY.md  SELF_HEALING_PIPELINE_DOCUMENTATION.md  TERRAGON_AUTONOMOUS_RESEARCH_BREAKTHROUGH_PUBLICATION.md  TERRAGON_AUTONOMOUS_SDLC_BREAKTHROUGH_RESEARCH_PUBLICATION.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_REPORT.md  TERRAGON_SDLC_AUTONOMOUS_IMPLEMENTATION_FINAL_REPORT.md  TERRAGON_SDLC_AUTONOMOUS_IMPLEMENTATION_REPORT.md  advanced_scaling_optimization.py  autonomous_research_acceleration.py  comprehensive_quality_gates.py  coverage_validation_report.json  debug_arrays.py  docker-compose.production.yml  docker-compose.yml  documentation_check_report.json  enhanced_neural_sca.py  enhanced_quality_gates.py  import_validation_report.json  (+30 more)
autonomous_research_results/: autonomous_research_report_1756048919.json  environment_validation.json  generated_hypotheses.json
benchmarks/: README.md  architecture_benchmark.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPREHENSIVE_DOCUMENTATION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md  RESEARCH_METHODOLOGY.md  RESEARCH_VALIDATION_REPORT.md  SECURITY_COMPLIANCE.md  TROUBLESHOOTING.md
examples/: README.md  adaptive_attack_demo.py  basic_fno_attack.py  generation_3_optimization_demo.py  hardware_integration_demo.py  kyber_analysis.py  multimodal_fusion_demo.py  self_healing_pipeline_demo.py
research/: NEURAL_OPERATOR_CRYPTANALYSIS_RESEARCH_PAPER.md  README.md  comparative_benchmark_framework.py  comprehensive_benchmark_framework.py  comprehensive_validation_framework.py  federated_neural_operator_learning.py  physics_informed_validation_framework.py  quantum_resistant_neural_operators.py  real_time_adaptive_neural_architecture.py
scripts/: coverage_check.py  (+6 more)
(+97 files in other folders)
